--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  fluttertoast: ^8.0.8
+  ftoast: ^2.0.0
   flutter_launcher_icons: ^0.9.2
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
