--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: 1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   ftoast: ^2.0.0
-  flutter_launcher_icons: ^0.9.2
-  firebase_auth: ^3.8.0
-  cloud_firestore: ^3.4.7
+  flutter_launcher_icons: ^0.13.1
+  firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
