--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   firebase_auth: ^4.6.1
   cloud_firestore: ^4.7.1
+  email_validator: ^2.1.16
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
