--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,23 +33,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 1.0.5
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   ftoast: ^2.0.0
-  flutter_launcher_icons: ^0.13.1
-  firebase_auth: ^4.6.1
-  cloud_firestore: ^4.7.1
-  email_validator: ^2.1.16
+  flutter_launcher_icons: ^0.14.1
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  email_validator: ^3.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
