--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,7 @@ if (flutterVersionName == null) {
 
 android {
     compileSdkVersion flutter.compileSdkVersion
+    namespace 'com.compra.nalista2'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
